Remove show_scores functionality not taken from fzy

--- a/dmenu.1
+++ b/dmenu.1
@@ -3,7 +3,7 @@
 dmenu \- dynamic menu
 .SH SYNOPSIS
 .B dmenu
-.RB [ \-bfvs ]
+.RB [ \-bfv ]
 .RB [ \-l
 .IR lines ]
 .RB [ \-m
@@ -89,9 +89,6 @@ prints version information to stdout, then exits.
 .TP
 .BI \-w " windowid"
 embed into windowid.
-.TP
-.B \-s
-show the scores of each match.
 .TP
 .BI \-j " workers"
 use the given number of workers for the match
